tests/outputs/Filter_076.out
Parse tree from tests/cases/Filter_076.inp:
Filter(9999)
  Expression(9999)
    ExpressionClause(9999)
      ExpressionPhrase(9999)
        Comparison(9999)
          ConstantFirstComparison(9999)
            Constant(9999)
              String(9999)
                TOKEN_3(9999): """, line: 1, col: 1
                EscapedChar(9999)
                  UnescapedChar(9999)
                    Letter(9999)
                      UppercaseLetter(9999)
                        TOKEN_35(9999): "C", line: 1, col: 2
                EscapedChar(9999)
                  UnescapedChar(9999)
                    Digit(9999)
                      TOKEN_18(9999): "2", line: 1, col: 3
                EscapedChar(9999)
                  UnescapedChar(9999)
                    Space(9999)
                      TOKEN_1(9999): " ", line: 1, col: 4
                EscapedChar(9999)
                  UnescapedChar(9999)
                    Letter(9999)
                      UppercaseLetter(9999)
                        TOKEN_40(9999): "H", line: 1, col: 5
                EscapedChar(9999)
                  UnescapedChar(9999)
                    Digit(9999)
                      TOKEN_18(9999): "2", line: 1, col: 6
                TOKEN_3(9999): """, line: 1, col: 7
                Spaces(9999)
                  Space(9999)
                    TOKEN_1(9999): " ", line: 1, col: 8
Error: in tests/cases/Filter_076.inp: line 1:
    unexpected token "L", expected one of "<", ">", "=", or "!"

"C2 H2" LIKE formula
        ^
